ユーザー管理機能の追加
追加修正箇所
spec 新規登録がうまくいくとき
バリデーションのemail削除、調整

--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,17 +1,14 @@
 <%= render "shared/second-header"%>
 
-<%= form_with model:@user, url: user_registration, class: 'registration-main', local: true do |f| %>
+<%= form_with model:@user, url: user_registration_path, class: 'registration-main', local: true do |f| %>
 <div class='form-wrap'>
   <div class='form-header'>
     <h1 class='form-header-text'>
       会員情報入力
     </h1>
   </div>
-
-  <%# インスタンスを渡して、エラー発生時にメッセージが表示されるようにしましょう。%>
-  <%# render 'shared/error_messages', model: f.object %>
-  <%# //インスタンスを渡して、エラー発生時にメッセージが表示されるようにしましょう。%>
-
+  
+  <%= render 'shared/error_messages', model: f.object %>
   <div class="form-group">
     <div class='form-text-wrap'>
       <label class="form-text">ニックネーム</label>
@@ -77,7 +74,7 @@
     <div class='input-birth-wrap'>
       <%= raw sprintf(
                   f.date_select(
-                    :hoge,
+                    :birthday,
                     class:'select-birth',
                     id:"birth-date",
                     use_month_numbers: true,
@@ -97,7 +94,7 @@
     </h2>
   </div>
   <div class='register-btn'>
-    <%= f.submit "会員登録" ,class:"register-red-btn" %>
+    <%= f.submit "会員登録" ,class: "register-red-btn" %>
   </div>
   <p class='register-info'>本人情報の登録について</p>
 </div>
