--- a/app/views/listings/index.html.erb
+++ b/app/views/listings/index.html.erb
@@ -131,7 +131,7 @@
     <% if @listing.present? %>
       <% @listing.each do |listing|%>
         <li class='list'>
-          <%= link_to "#" do %>
+          <%= link_to listing_path(listing.id) do %>
           <div class='item-img-content'>
             <%= image_tag listing.image, class: "item-img" %>
 
@@ -157,10 +157,7 @@
           <% end %>
         <% end %>
       </li>
-      <%# //商品のインスタンス変数になにか入っている場合、中身のすべてを展開できるようにしましょう %>
 
-      <%# 商品がない場合のダミー %>
-      <%# 商品がある場合は表示されないようにしましょう %>
       <% else %>
       <li class='list'>
         <%= link_to '#' do %>
@@ -180,8 +177,6 @@
       </li>
        <% end %>
     <% end %>
-      <%# //商品がある場合は表示されないようにしましょう %>
-      <%# /商品がない場合のダミー %>
     </ul>
   </div>
   <%# /商品一覧 %>
