--- a/app/views/listings/show.html.erb
+++ b/app/views/listings/show.html.erb
@@ -41,7 +41,7 @@
       <tbody>
         <tr>
           <th class="detail-item">出品者</th>
-          <td class="detail-value"><%= "出品者名" %></td>
+          <td class="detail-value"><%= @listing.user.nickname %></td>
         </tr>
         <tr>
           <th class="detail-item">カテゴリー</th>
